--- a/AbstractFactory/SimpleFactory.csproj
+++ b/AbstractFactory/SimpleFactory.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F1E0D86C-940B-4310-B5A0-F1471A81AD4B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>AbstractFactory</RootNamespace>
-    <AssemblyName>AbstractFactory</AssemblyName>
+    <RootNamespace>SimpleFactory</RootNamespace>
+    <AssemblyName>SimpleFactory</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,10 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Person.cs" />
-    <Compile Include="Level.cs" />
+    <Compile Include="InsertionSorter.cs" />
+    <Compile Include="ISorter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectionSorter.cs" />
+    <Compile Include="ShellSorter.cs" />
+    <Compile Include="AbstractSorter.cs" />
+    <Compile Include="SorterFactory.cs" />
+    <Compile Include="Sorters.cs" />
+    <Compile Include="TopDownMergeSorter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
