Add maker class and personality enum with flags attrtibute.

--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="CharacterBuilder.cs" />
+    <Compile Include="CharacterMaker.cs" />
+    <Compile Include="Personality.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
