--- a/SimpleFactory/SimpleFactory.csproj
+++ b/SimpleFactory/SimpleFactory.csproj
@@ -42,19 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InsertionSorter.cs" />
-    <Compile Include="ISorter.cs" />
+    <Compile Include="Sorters\InsertionSorter.cs" />
+    <Compile Include="Sorters\ISorter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectionSorter.cs" />
-    <Compile Include="ShellSorter.cs" />
-    <Compile Include="AbstractSorter.cs" />
+    <Compile Include="Sorters\SelectionSorter.cs" />
+    <Compile Include="Sorters\ShellSorter.cs" />
+    <Compile Include="Sorters\AbstractSorter.cs" />
     <Compile Include="SorterFactory.cs" />
-    <Compile Include="Sorters.cs" />
-    <Compile Include="TopDownMergeSorter.cs" />
+    <Compile Include="Sorters\Sorters.cs" />
+    <Compile Include="Sorters\TopDownMergeSorter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
