--- a/CommonClientLib/CommonClientLib.csproj
+++ b/CommonClientLib/CommonClientLib.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContinuationDeterminer.cs" />
     <Compile Include="TextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
