--- a/CommonClientLib/CommonClientLib.csproj
+++ b/CommonClientLib/CommonClientLib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ContinuationDeterminer.cs" />
     <Compile Include="TextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextPrinter.cs" />
     <Compile Include="TypeParser.cs" />
   </ItemGroup>
   <ItemGroup>
