--- a/CompositeTests/CompositeTests.csproj
+++ b/CompositeTests/CompositeTests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonClientLib\CommonClientLib.csproj" />
     <ProjectReference Include="..\Composite\Composite.csproj" />
   </ItemGroup>
 
