--- a/CommonClientLib/CommonClientLib.csproj
+++ b/CommonClientLib/CommonClientLib.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="ContinuationDeterminer.cs" />
     <Compile Include="ListExtensionMethods.cs" />
+    <Compile Include="QuestionAsker.cs" />
     <Compile Include="TextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextPrinter.cs" />
