Add town decorator and int extension method

--- a/CommonClientLib/CommonClientLib.csproj
+++ b/CommonClientLib/CommonClientLib.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContinuationDeterminer.cs" />
+    <Compile Include="IntExtensionMethods.cs" />
     <Compile Include="ListExtensionMethods.cs" />
     <Compile Include="QuestionAsker.cs" />
     <Compile Include="TextParser.cs" />
