--- a/Facade/Facade.csproj
+++ b/Facade/Facade.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonClientLib\CommonClientLib.csproj" />
+  </ItemGroup>
+
 </Project>
