--- a/CommonClientLib/CommonClientLib.csproj
+++ b/CommonClientLib/CommonClientLib.csproj
@@ -45,14 +45,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContinuationDeterminer.cs" />
-    <Compile Include="IntExtensionMethods.cs" />
-    <Compile Include="ListExtensionMethods.cs" />
+    <Compile Include="ExtensionMethods\IntExtensionMethods.cs" />
+    <Compile Include="ExtensionMethods\IEnumerableExtensionMethods.cs" />
     <Compile Include="QuestionAsker.cs" />
     <Compile Include="TextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextPrinter.cs" />
     <Compile Include="Tree.cs" />
     <Compile Include="TypeParser.cs" />
+    <Compile Include="ExtensionMethods\XElementExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
