--- a/Command/Command.csproj
+++ b/Command/Command.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CommonClientLib\CommonClientLib.csproj" />
   </ItemGroup>
 
