Load news on startup

--- a/Observer/Observer.csproj
+++ b/Observer/Observer.csproj
@@ -6,7 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CommonClientLib\CommonClientLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="NewsItems.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
