Load possible responses on startup

--- a/Observer/Observer.csproj
+++ b/Observer/Observer.csproj
@@ -17,6 +17,9 @@
     <None Update="NewsItems.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Responses.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
