--- a/State/State.csproj
+++ b/State/State.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MathGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\HardGameState.cs" />
     <Compile Include="States\ModerateGameState.cs" />
   </ItemGroup>
   <ItemGroup>
